fix: cors for mans.piotmni.pl